--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="or_sign_in_with">Or sign in with</string>
     <string name="google">Google</string>
     <string name="apple">Apple</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
