--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="google">Google</string>
     <string name="apple">Apple</string>
 
-<!--    For maps-->
+    <!--    For maps-->
     <string name="option_get_place">Get place</string>
     <string name="pick_place">Choose a place</string>
     <string name="default_info_title">Default Location</string>
@@ -27,4 +27,6 @@
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
